# PDF_Extractor_v2

./: .gitignore  README.md  pyproject.toml  run.py
configs/: default.json
src/pdf_extractor/: __init__.py  cli.py  config.py  continuation.py  models.py  ocr_validation.py  output.py  pipeline.py  postprocess.py  router.py  table_structure.py  utils.py  validation.py
src/pdf_extractor/extractors/: __init__.py  pdfplumber_extractor.py
